[gd_scene load_steps=6 format=3 uid="uid://bisyd5rg4anu7"]

[ext_resource type="Script" path="res://Scripts/ui & inventory/tooltip.gd" id="1_wf2fi"]
[ext_resource type="FontFile" uid="uid://doy7m1th38j8j" path="res://Fonts/pixel_arial_bold (titles).TTF" id="2_8s52p"]
[ext_resource type="FontFile" uid="uid://dsnajbdx217pn" path="res://Fonts/04B03 (body text).TTF" id="3_5suhf"]

[sub_resource type="Gradient" id="Gradient_d3rbr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ki36j"]
gradient = SubResource("Gradient_d3rbr")
width = 80
height = 40

[node name="Tooltip" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_wf2fi")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.886275, 0.623529, 0.443137, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 90.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_ki36j")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -129.0
offset_right = 90.0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 1
alignment = 2

[node name="ItemName" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.133333, 0.184314, 0.235294)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("2_8s52p")
theme_override_font_sizes/font_size = 8
text = "Rusty Pail"
autowrap_mode = 3

[node name="ItemTag" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.133333, 0.184314, 0.235294)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_5suhf")
theme_override_font_sizes/font_size = 8
text = "TOOL"
autowrap_mode = 3

[node name="ItemDescription" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.133333, 0.184314, 0.235294)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_5suhf")
theme_override_font_sizes/font_size = 8
text = "Used to water crops. It can be refilled at any water source."
autowrap_mode = 3
